--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 
-spring.datasource.url=jdbc:h2:file:~/springboot;AUTO_SERVER=TRUE;
 spring.sql.init.mode=always
 server-port=8080
-# Spring already comes with a web interface for H2, we just need to enable it:
-spring.h2.console.enabled=true
-# We can now access the h2 console on our browser with http://localhost:8080/h2-console
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/TillRecords
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=update
